--- a/main.css
+++ b/main.css
@@ -1,1 +1,17 @@
-/*  */
+/* margin */
+* {
+  margin: 0;
+}
+
+h1 {
+  color: white;
+  background: red;
+  padding: 20px;
+  margin: 3rem;
+}
+p {
+  color: white;
+  background: blue;
+  padding: 5px 20px 50px 40px;
+  margin: 10px 10px 10px 10px;
+}
