--- a/main.css
+++ b/main.css
@@ -1,1 +1,13 @@
-/*  */
+/* border radius */
+
+h1,
+p {
+  color: white;
+}
+h1 {
+  background: red;
+  padding: 10px;
+}
+p {
+  background: blue;
+}
